--- a/build.gradle
+++ b/build.gradle
@@ -17,3 +17,26 @@ dependencies {
 test {
     useTestNG()
 }
+
+task reg(type: Test){
+
+    useTestNG {
+
+        //suites 'src/test/resources/testng.xml'
+        def suite =System.getProperty('suite','')
+        def groups=System.getProperty('groups');
+        if(groups!=null){
+            includeGroups groups
+        }
+        if(suite.equals('newtest')){
+            suites 'src/test/resources/newtest.xml'
+        }
+        else if(suite.equals('testing')){
+            suites 'src/test/resources/testing.xml'
+        }
+    }
+
+    if (project.hasProperty('browser')) {
+        systemProperty 'browser', "${browser}"
+    }
+}
